# Feige-Fiat-Shamir

./: .clang-tidy  .gitmodules  CMakeLists.txt
include/client/: authentication.hpp  connection.hpp  key_gen.hpp  utils.hpp
include/server/: authentication.hpp  connection.hpp  database.hpp
include/utils/: utils.hpp
src/client/: CMakeLists.txt  client.cpp
src/client/libclient/: CMakeLists.txt  authentication.cpp  connection.cpp  key_gen.cpp  utils.cpp
src/server/: CMakeLists.txt  server.cpp
src/server/libserver/: CMakeLists.txt  authentication.cpp  connection.cpp  database.cpp  identification.cpp
src/utils/: utils.cpp
